<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/detail"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa"
    android:orientation="vertical"
    tools:showIn="@layout/detail_main"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.flexfare.android.user.views.CurvedLayout
            android:id="@+id/diagonalLayout"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:elevation="10dip"
            app:arc_cropDirection="cropOutside"
            app:arc_position="bottom"
            app:arc_height="25dp">

            <com.flaviofaria.kenburnsview.KenBurnsView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/camry"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </FrameLayout>

        </com.flexfare.android.user.views.CurvedLayout>

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="14dp"
            android:layout_marginEnd="14dp"
            app:srcCompat="@drawable/ic_add"
            app:backgroundTint="#ce471d"
            app:elevation="15dp"
            app:fabSize="normal"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="300dp"

             />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:id="@+id/relativeLayout"
            android:layout_below="@+id/diagonalLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avi"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/avatar"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp"
                android:layout_marginTop="45dp"/>

            <TextView
                android:id="@+id/driverName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driver_name"
                android:textAllCaps="true"
                android:layout_centerHorizontal="true"
                android:textColor="#3A3A3A"
                android:textSize="22sp"/>

            <TextView
                android:id="@+id/plateNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/plate"
                android:textColor="#3A3A3A"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:layout_below="@id/driverName"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/license"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/license"
                android:layout_below="@+id/plateNo"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/car_type_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/car_type"
                android:textColor="#3A3A3A"
                android:layout_below="@+id/license"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/carType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/car_type_tv"
                android:text="@string/carType"
                android:textColor="#979696"
                android:textSize="15sp"/>
            <ImageView
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/carType"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="25dp"
                android:layout_marginEnd="25dp"
                android:src="@color/contentDividerLine" />
            <TextView
                android:id="@+id/cate"
                android:fontFamily="sans-serif"
                android:textColor="#3A3A3A"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:layout_below="@id/divider"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="35dp"
                android:layout_marginStart="35dp"/>
            <TextView
                android:id="@+id/cates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cate"
                android:text="@string/cates"
                android:layout_marginLeft="45sp"
                android:layout_marginStart="45sp"/>
            <TextView
                android:id="@+id/route_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider"
                android:text="@string/route"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:textColor="#3A3A3A"
                android:fontFamily="sans-serif"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="55dp"
                android:layout_marginRight="55dp"/>
            <TextView
                android:id="@+id/routes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/routes"
                android:layout_below="@id/route_tv"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="45dp"
                android:layout_marginRight="45dp"/>
            <ImageView
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/routes"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="25dp"
                android:layout_marginEnd="25dp"
                android:src="@color/contentDividerLine" />
            <TextView
                android:id="@+id/bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bio"
                android:layout_below="@id/divider2"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#3A3A3A"
                android:fontFamily="sans-serif"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text"
                android:layout_below="@id/bio"
                android:layout_marginTop="15dp"
                />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>