<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="5dp"
    android:layout_height="wrap_content">

    <RelativeLayout
        xmlns:app="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="5dp"
        android:background="@drawable/layout_bg">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avi"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/avatar"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"
            android:layout_centerVertical="true"/>
        <ImageView
            android:id="@+id/title_from_to_dots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/avi"
            android:layout_toEndOf="@id/avi"
            android:layout_marginLeft="@dimen/item_img_margin_left"
            android:layout_marginStart="@dimen/item_img_margin_left"
            android:layout_marginTop="@dimen/item_margin_top"
            android:src="@drawable/from_to_purple" />
        <TextView
            android:id="@+id/driverName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/driver_name"
            android:layout_marginLeft="@dimen/item_margin_left"
            android:layout_marginStart="@dimen/item_margin_left"
            android:layout_toRightOf="@id/title_from_to_dots"
            android:layout_toEndOf="@id/title_from_to_dots"
            android:textAllCaps="true"/>
        <ImageView
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/driverName"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/title_from_to_dots"
            android:layout_toRightOf="@id/title_from_to_dots"
            android:layout_marginLeft="@dimen/item_margin_left"
            android:layout_marginStart="@dimen/item_margin_left"
            android:src="@color/contentDividerLine" />
        <TextView
            android:id="@+id/car_type_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_type"
            android:layout_toRightOf="@id/title_from_to_dots"
            android:layout_toEndOf="@id/title_from_to_dots"
            android:layout_marginLeft="@dimen/item_margin_left"
            android:layout_marginStart="@dimen/item_margin_left"
            android:layout_marginTop="15dp"
            android:layout_below="@id/driverName"/>
        <TextView
            android:id="@+id/carType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carType"
            android:layout_toRightOf="@id/car_type_tv"
            android:layout_toEndOf="@id/car_type_tv"
            android:layout_below="@id/driverName"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"/>
        <ImageView
            android:id="@+id/title_from_to_dots_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/car_type_tv"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/title_from_to_dots"
            android:layout_toRightOf="@id/title_from_to_dots"
            android:layout_marginLeft="@dimen/item_img_margin_left"
            android:layout_marginStart="@dimen/item_margin_left"
            android:src="@color/contentDividerLine" />
        <TextView
            android:id="@+id/route_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/route"
            android:layout_toRightOf="@id/title_from_to_dots"
            android:layout_toEndOf="@id/title_from_to_dots"
            android:layout_below="@id/car_type_tv"
            android:layout_marginStart="@dimen/item_margin_left"
            android:layout_marginLeft="@dimen/item_margin_left"
            android:layout_marginTop="@dimen/item_margin_top"/>

        <TextView
            android:id="@+id/routes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routes"
            android:layout_below="@id/carType"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@id/route_tv"
            android:layout_toEndOf="@id/route_tv"
            android:layout_marginLeft="36dp"
            android:layout_marginStart="36dp"/>
        <ImageView
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/route_tv"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/title_from_to_dots"
            android:layout_toRightOf="@id/title_from_to_dots"
            android:layout_marginLeft="@dimen/item_margin_left"
            android:layout_marginStart="@dimen/item_margin_left"
            android:src="@color/contentDividerLine" />
        <TextView
            android:id="@+id/category_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:layout_below="@id/route_tv"
            android:layout_toRightOf="@id/title_from_to_dots"
            android:layout_toEndOf="@id/title_from_to_dots"
            android:layout_marginLeft="@dimen/item_margin_left"
            android:layout_marginStart="@dimen/item_margin_left"
            android:layout_marginTop="@dimen/item_margin_top"/>


        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cates"
            android:layout_below="@id/routes"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@id/category_tv"
            android:layout_toEndOf="@id/category_tv"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>

    </RelativeLayout>
</android.support.v7.widget.CardView>